# cstuff

./: .gitignore  CMakeLists.txt  Makefile  auto_free.c  backspaces.c  bad_mem_stuff.c  blanklines.c  derpbob.c  endian_long.c  epoll_server.c  fixfinaleol.c  fizzbuzz.c  foo.c  handle_signal.c  hex.c  insert_newlines.c  modulo.c  multi_files.c  pointers_equal.c  shifting.c  sizeof_things.c  sizeof_void.c  stackoverflow.c  to_inserts.c  udp_listen.c  use_gai.c  use_gai_a.c
